fix: form spacing in KAT theme (#1261)

--- a/themes/kat/_index.scss
+++ b/themes/kat/_index.scss
@@ -464,6 +464,18 @@ and spacing sets */
   $language-selector-list-item-hover-text-color: semantic.$color-text-default,
   $language-selector-list-item-hover-background-color: color-scheme.$violet-50,
 
+  // form fieldset
+  $form-fieldset-border-width: 0,
+  $form-fieldset-padding: 0,
+  $form-fieldset-margin: 0,
+  $form-fieldset-legend-font-weight: bold,
+  $form-fieldset-legend-margin-bottom: null,
+  $form-fieldset-legend-margin: 0 0 1rem 0,
+  $form-fieldset-legend-padding: 0,
+  $form-fieldset-input-margin: 0.5rem 0 1rem 0,
+  $form-fieldset-fields-padding: 0,
+  $form-fieldset-fields-margin: 0,
+
   // nota bene
   $nota-bene-font-size: body-text.$body-text-s,
   $nota-bene-text-color: color-scheme.$grey-700
